src/objects/Issue_Desk__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Deduplica</fullName>
                </value>
                <value>
                    <fullName>Eventi / Campagne</fullName>
                </value>
                <value>
                    <fullName>Flussi Batch</fullName>
                </value>
                <value>
                    <fullName>Formazione</fullName>
                </value>
                <value>
                    <fullName>Implementazione Oggetti - Utenti</fullName>
                </value>
                <value>
                    <fullName>Impostazioni Generali</fullName>
                </value>
                <value>
                    <fullName>Integrazioni Realtime E-commerce</fullName>
                </value>
                <value>
                    <fullName>Integrazioni Realtime Xstore</fullName>
                </value>
                <value>
                    <fullName>Layout di pagina</fullName>
                </value>
                <value>
                    <fullName>Reports e Dashboards</fullName>
                </value>
                <value>
                    <fullName>Scheda Cliente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Completamento_Attivit__c</fullName>
        <label>Data Completamento Attività</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Consegna_Prevista__c</fullName>
        <label>Data Consegna Prevista</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Consegna_Richiesta__c</fullName>
        <label>Data Consegna Richiesta</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Giorni_consuntivati__c</fullName>
        <label>Giorni consuntivati</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Giorni_stimati__c</fullName>
        <label>Giorni stimati</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Link_Issue_Jira__c</fullName>
        <label>Link Issue Jira</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Macro_Area__c</fullName>
        <label>Macro Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Cloud</fullName>
                </value>
                <value>
                    <fullName>Service Cloud</fullName>
                </value>
                <value>
                    <fullName>Salesforce1</fullName>
                </value>
                <value>
                    <fullName>Marketing Cloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Note_Brunello_Cucinelli__c</fullName>
        <label>Note Brunello Cucinelli</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Note_Ten__c</fullName>
        <label>Note Ten</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Oggetto__c</fullName>
        <label>Oggetto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alta</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                    <default>true</default>
                    <label>Media</label>
                </value>
                <value>
                    <fullName>Bassa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Richiesta__c</fullName>
        <label>Richiesta</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nuova</fullName>
                    <default>true</default>
                    <label>Nuova</label>
                </value>
                <value>
                    <fullName>Da Quotare</fullName>
                </value>
                <value>
                    <fullName>Da Approvare</fullName>
                </value>
                <value>
                    <fullName>Approvata</fullName>
                </value>
                <value>
                    <fullName>In Sviluppo</fullName>
                </value>
                <value>
                    <fullName>Sospesa</fullName>
                </value>
                <value>
                    <fullName>Completata</fullName>
                </value>
                <value>
                    <fullName>Annullata</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Issue Desk</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Oggetto__c</columns>
        <columns>Macro_Area__c</columns>
        <columns>Priority__c</columns>
        <columns>Data_Consegna_Prevista__c</columns>
        <columns>Status__c</columns>
        <columns>Area__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Giorni_stimati__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>it</language>
    </listViews>
    <listViews>
        <fullName>Da_Quotare</fullName>
        <columns>NAME</columns>
        <columns>Giorni_stimati__c</columns>
        <columns>Oggetto__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Macro_Area__c</columns>
        <columns>Area__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Data_Consegna_Prevista__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Da Quotare</value>
        </filters>
        <label>02 - Da Quotare</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X01_Nuovi</fullName>
        <columns>NAME</columns>
        <columns>Oggetto__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Macro_Area__c</columns>
        <columns>Area__c</columns>
        <columns>Data_Consegna_Richiesta__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Giorni_stimati__c</columns>
        <columns>Data_Consegna_Prevista__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Nuova</value>
        </filters>
        <label>01 - Nuovi</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X03_Da_approvare</fullName>
        <columns>NAME</columns>
        <columns>Oggetto__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Macro_Area__c</columns>
        <columns>Area__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Giorni_stimati__c</columns>
        <columns>Data_Consegna_Prevista__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Da Approvare</value>
        </filters>
        <label>03 - Da Approvare</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X04_Approvati</fullName>
        <columns>NAME</columns>
        <columns>Oggetto__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Data_Consegna_Prevista__c</columns>
        <columns>Macro_Area__c</columns>
        <columns>Area__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Giorni_stimati__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approvata</value>
        </filters>
        <label>04 - Approvati</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X05_In_Sviluppo</fullName>
        <columns>NAME</columns>
        <columns>Oggetto__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Macro_Area__c</columns>
        <columns>Area__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Giorni_stimati__c</columns>
        <columns>Data_Consegna_Prevista__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Sviluppo</value>
        </filters>
        <label>05 - In Sviluppo</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X06_Sospesi</fullName>
        <columns>NAME</columns>
        <columns>Oggetto__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Macro_Area__c</columns>
        <columns>Area__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Giorni_stimati__c</columns>
        <columns>Data_Consegna_Prevista__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Sospesa</value>
        </filters>
        <label>06 - Sospesi</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X07_Completati</fullName>
        <columns>NAME</columns>
        <columns>Oggetto__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Giorni_stimati__c</columns>
        <columns>Area__c</columns>
        <columns>Macro_Area__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Data_Consegna_Prevista__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completata</value>
        </filters>
        <label>07 - Completati</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X08_Annullati</fullName>
        <columns>NAME</columns>
        <columns>Oggetto__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Macro_Area__c</columns>
        <columns>Area__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Giorni_stimati__c</columns>
        <columns>Data_Consegna_Prevista__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Annullata</value>
        </filters>
        <label>08 - Annullati</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X12_Marketing_Cloud</fullName>
        <columns>NAME</columns>
        <columns>Oggetto__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Giorni_stimati__c</columns>
        <columns>Area__c</columns>
        <columns>Macro_Area__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Data_Consegna_Prevista__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Macro_Area__c</field>
            <operation>equals</operation>
            <value>Marketing Cloud</value>
        </filters>
        <label>09 - Marketing Cloud</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Numero Attività</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues Desk</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>